feat: add user input validation and grpc error codes
