# api/config.swagger.json
@@ -7,6 +7,9 @@
   "tags": [
     {
       "name": "DnsService"
+    },
+    {
+      "name": "HostnameService"
     }
   ],
   "consumes": [
@@ -97,6 +100,59 @@
           "DnsService"
         ]
       }
+    },
+    "/hostname": {
+      "get": {
+        "operationId": "HostnameService_GetHostname",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/genHostnameHostname"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "tags": [
+          "HostnameService"
+        ]
+      },
+      "put": {
+        "operationId": "HostnameService_UpdateHostname",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "type": "object",
+              "properties": {}
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/genHostnameHostname"
+            }
+          }
+        ],
+        "tags": [
+          "HostnameService"
+        ]
+      }
     }
   },
   "definitions": {
@@ -116,6 +172,14 @@
           "items": {
             "type": "string"
           }
+        }
+      }
+    },
+    "genHostnameHostname": {
+      "type": "object",
+      "properties": {
+        "hostname": {
+          "type": "string"
         }
       }
     },
